# ChessPlusPlus

./: .doxygen  .gitignore  .gitmodules  .travis.yml  Building.mediawiki  CMakeLists.txt  CONTRIBUTING.md  Home.md  Home.mediawiki  Makefile  Makefile.Lowest0ne  Makefile.Ne555  Makefile.Thumperrr  README  README.md  _app_state_8hpp.html  _app_state_8hpp_source.html  _application_8cpp.html  _application_8hpp.html  _application_8hpp_source.html  _archer_8cpp.html  _archer_8hpp.html  _archer_8hpp_source.html  _bishop_8cpp.html  _bishop_8hpp.html  _bishop_8hpp_source.html  _board_8cpp.html  _board_8hpp.html  _board_8hpp_source.html  _board_config_8hpp.html  _board_config_8hpp_source.html  _chess_plus_plus_state_8cpp.html  _chess_plus_plus_state_8hpp.html  _chess_plus_plus_state_8hpp_source.html  _configuration_8cpp.html  _configuration_8hpp.html  _configuration_8hpp_source.html  _debug_8hpp.html  _debug_8hpp.js  _debug_8hpp_source.html  (+228 more)
MacOS/: bundle.sh  info.plist
config/: board.json  graphics.json
config/chesspp/: board.json  graphics.json  resources.json
docs/: Doxyfile
libs/SFML-4fbefe7/: CMakeLists.txt
libs/SFML-4fbefe7/build_vs11/lib/: sfml-audio-s-d.lib  sfml-audio-s.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-s.lib  sfml-system-s-d.lib  sfml-system-s.lib  sfml-window-s-d.lib  sfml-window-s.lib
libs/SFML-4fbefe7/cmake/: Macros.cmake
libs/SFML-4fbefe7/examples/cocoa/: CMakeLists.txt
libs/SFML-4fbefe7/examples/opengl/: OpenGL.cpp
libs/SFML-4fbefe7/examples/window/: Window.cpp
libs/SFML-4fbefe7/include/: SFML.hpp
libs/SFML-4fbefe7/src/SFML/Audio/: ALCheck.cpp  ALCheck.hpp  AudioDevice.cpp  AudioDevice.hpp  CMakeLists.txt  Listener.cpp  Music.cpp  Sound.cpp  SoundBuffer.cpp  SoundBufferRecorder.cpp  SoundFile.cpp  SoundFile.hpp  SoundRecorder.cpp  SoundSource.cpp  SoundStream.cpp
libs/SFML-4fbefe7/src/SFML/Graphics/: CMakeLists.txt  Color.cpp  Font.cpp  GLCheck.cpp  GLCheck.hpp  Image.cpp  ImageLoader.cpp  ImageLoader.hpp  RenderTarget.cpp  RenderTexture.cpp  RenderTextureImpl.cpp  RenderTextureImpl.hpp  RenderTextureImplFBO.cpp  RenderTextureImplFBO.hpp  RenderWindow.cpp  Shader.cpp  Shape.cpp  Sprite.cpp  Text.cpp  View.cpp
libs/SFML-4fbefe7/src/SFML/Main/: CMakeLists.txt
libs/SFML-4fbefe7/src/SFML/Network/: CMakeLists.txt  Ftp.cpp  Http.cpp  IpAddress.cpp  Packet.cpp  Socket.cpp  SocketImpl.hpp  SocketSelector.cpp  TcpListener.cpp  TcpSocket.cpp  UdpSocket.cpp
libs/SFML-4fbefe7/src/SFML/Network/Unix/: SocketImpl.cpp  SocketImpl.hpp
libs/SFML-4fbefe7/src/SFML/Network/Win32/: SocketImpl.cpp  SocketImpl.hpp
libs/SFML-4fbefe7/src/SFML/System/: CMakeLists.txt  Clock.cpp  Err.cpp  Lock.cpp  Mutex.cpp  Sleep.cpp  String.cpp  Thread.cpp  ThreadLocal.cpp
libs/SFML-4fbefe7/src/SFML/System/Unix/: MutexImpl.cpp  MutexImpl.hpp  ThreadImpl.cpp  ThreadImpl.hpp  ThreadLocalImpl.cpp  ThreadLocalImpl.hpp
libs/SFML-4fbefe7/src/SFML/Window/: CMakeLists.txt  Context.cpp  GlContext.cpp  GlContext.hpp  GlResource.cpp  VideoMode.cpp  VideoModeImpl.hpp  Window.cpp  WindowImpl.cpp  WindowImpl.hpp
res/font/OpenSans/: LICENSE.txt
res/games/: new_game.txt
res/img/: MainMenu.xcf
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  (+63 more)
src/: AppState.h  AppState.hpp  AppStateGame.cpp  AppStateGame.h  AppStateGame.hpp  AppStateManager.cpp  AppStateManager.h  Application.cpp  Application.h  Application.hpp  CMakeLists.txt  ChessPlusPlusState.cpp  ChessPlusPlusState.hpp  Configuration.h  Configuration.hpp  Debug.cpp  Debug.hpp  DebugLogger.h  Event.cpp  Event.h  Exception.h  Exception.hpp  Graphics.cpp  Graphics.h  Graphics.hpp  JsonReader.hpp  Main.cpp  README.md  ResourceManager.h  ResourceManager.hpp  ResourceManager_impl.hpp  SFML.hpp  SFMLEvent.cpp  SFMLEvent.h  SFMLEvent.hpp  SFMLEventHandler.hpp  SfmlEventHandler.hpp  StartMenuState.cpp  StartMenuState.hpp  TextureManager.cpp  (+6 more)
src/app/: AppState.hpp  Application.cpp  Application.hpp  Button.cpp  Button.hpp  ButtonManager.cpp  ButtonManager.hpp  CMakeLists.txt  ChessPlusPlusState.cpp  ChessPlusPlusState.hpp  StartMenuState.cpp  StartMenuState.hpp
src/board/: Bishop.cpp  Bishop.h  Bishop.hpp  Board.cpp  Board.h  Board.hpp  CMakeLists.txt  Castling.hpp  King.cpp  King.h  King.hpp  Knight.cpp  Knight.h  Knight.hpp  Logger.cpp  Logger.hpp  OnValidity.txt  Pawn.cpp  Pawn.h  Pawn.hpp  Piece.cpp  Piece.h  Piece.hpp  Position.cpp  Position.h  Position.hpp  Queen.cpp  Queen.h  Queen.hpp  Rook.cpp  Rook.h  Rook.hpp  logger.cpp  logger.h
src/chesspp/: AppStateGame.hpp  Application.hpp  Exception.hpp
src/chesspp/board/: Bishop.cpp  Board.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.hpp  Piece.cpp  Piece.hpp  Position.cpp  Queen.hpp  Rook.hpp
src/chesspp/config/: Configuration.hpp
src/chesspp/graphics/: Graphics.cpp  Graphics.hpp
src/chesspp/util/: JsonReader.hpp
src/config/: BoardConfig.cpp  BoardConfig.hpp  CMakeLists.txt  Configuration.cpp  Configuration.hpp  GraphicsConfig.hpp  ResourceConfig.hpp  ResourcesConfig.hpp
src/factory/: ClassicFactory.cpp  ClassicFactory.hpp  Factory.hpp
src/gfx/: CMakeLists.txt  Graphics.cpp  Graphics.hpp  GraphicsHandler.cpp  GraphicsHandler.hpp
src/graphics/: Graphics.cpp  Graphics.hpp
src/log/: Logger.cpp
src/piece/: Archer.cpp  Archer.hpp  Bishop.cpp  Bishop.hpp  CMakeLists.txt  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
src/res/: ResourceManager.hpp  SfmlFileResource.hpp
src/util/: CMakeLists.txt  Direction.cpp  Direction.hpp  JsonReader.cpp  JsonReader.hpp  Position.hpp  Utilities.hpp
support/: png_split.cpp
(+15 files in other folders)
